parser.output
Terminales no usados en la gramática

    PRECED3
    PRECED2
    PRECED1


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: RPROGRAM TID $@1 erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE M

    3 $@2: %empty

    4 erazagupenak: mota id_zerrenda TSEMIC $@2 erazagupenak
    5             | %empty

    6 id_zerrenda: TID id_zerrendaren_bestea

    7 id_zerrendaren_bestea: TCOMMA TID id_zerrendaren_bestea
    8                      | %empty

    9 mota: RINT
   10     | RFLOAT

   11 azpiprogramen_erazagupena: azpiprogramaren_erazagupena azpiprogramen_erazagupena
   12                          | %empty

   13 $@3: %empty

   14 azpiprogramaren_erazagupena: RPROC TID $@3 argumentuak erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE

   15 argumentuak: TLPAREN par_zerrenda TRPAREN
   16            | %empty

   17 $@4: %empty

   18 par_zerrenda: mota par_mota id_zerrenda $@4 par_zerrendaren_bestea

   19 par_mota: TOUTPARAM
   20         | TCLE
   21         | TINOUTPARAM

   22 $@5: %empty

   23 par_zerrendaren_bestea: TSEMIC mota par_mota id_zerrenda $@5 par_zerrendaren_bestea
   24                       | %empty

   25 sententzia_zerrenda: sententzia_zerrenda sententzia
   26                    | %empty

   27 sententzia: aldagaia TASSIG adierazpena TSEMIC
   28           | RIF adierazpena TLBRACE M sententzia_zerrenda TRBRACE N M if_jarraipena M TSEMIC
   29           | M RWHILE RFOREVER TLBRACE sententzia_zerrenda TRBRACE M TSEMIC
   30           | RDO M TLBRACE sententzia_zerrenda TRBRACE RUNTIL M adierazpena RELSE M TLBRACE sententzia_zerrenda TRBRACE M TSEMIC
   31           | RSKIP RIF adierazpena TSEMIC M
   32           | N REXIT TSEMIC
   33           | RREAD TLPAREN aldagaia TRPAREN TSEMIC
   34           | RPRINTLN TLPAREN adierazpena TRPAREN TSEMIC

   35 if_jarraipena: bestela
   36              | %empty

   37 bestela: RELSIF adierazpena TLBRACE M sententzia_zerrenda TRBRACE N M bestela M
   38        | RELSE TLBRACE sententzia_zerrenda TRBRACE

   39 aldagaia: TID

   40 adierazpena: adierazpena TADD adierazpena
   41            | adierazpena TSUB adierazpena
   42            | adierazpena TMUL adierazpena
   43            | adierazpena TDIV adierazpena
   44            | adierazpena TCEQ adierazpena
   45            | adierazpena TCGT adierazpena
   46            | adierazpena TCLT adierazpena
   47            | adierazpena TCGE adierazpena
   48            | adierazpena TCLE adierazpena
   49            | adierazpena TCNE adierazpena
   50            | adierazpena RAND M adierazpena
   51            | adierazpena ROR M adierazpena
   52            | RNOT adierazpena
   53            | aldagaia
   54            | TINTEGER
   55            | TFLOAT
   56            | TLPAREN adierazpena TRPAREN

   57 M: %empty

   58 N: %empty


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TID <izena> (258) 2 6 7 14 39
    TFLOAT <izena> (259) 55
    TINTEGER <izena> (260) 54
    RPROGRAM (261) 2
    RIF (262) 28 31
    RWHILE (263) 29
    RFOREVER (264) 29
    RDO (265) 30
    RPROC (266) 14
    RUNTIL (267) 30
    RELSE (268) 30 38
    RSKIP (269) 31
    REXIT (270) 32
    RPRINTLN (271) 34
    RREAD (272) 33
    RINT (273) 9
    RFLOAT (274) 10
    RELSIF (275) 37
    RAND (276) 50
    ROR (277) 51
    RNOT (278) 52
    TMUL (279) 42
    TASSIG (280) 27
    TADD (281) 40
    TSUB (282) 41
    TDIV (283) 43
    TCEQ (284) 44
    TCGT (285) 45
    TCLT (286) 46
    TCGE (287) 47
    TCLE (288) 20 48
    TCNE (289) 49
    TSEMIC (290) 4 23 27 28 29 30 31 32 33 34
    TCOMMA (291) 7
    TLPAREN (292) 15 33 34 56
    TRPAREN (293) 15 33 34 56
    TLBRACE (294) 2 14 28 29 30 37 38
    TRBRACE (295) 2 14 28 29 30 37 38
    TOUTPARAM (296) 19
    TINOUTPARAM (297) 21
    PRECED3 (298)
    PRECED2 (299)
    PRECED1 (300)


No terminales con las reglas donde aparecen

    $accept (46)
        on left: 0
    programa (47)
        on left: 2
        on right: 0
    $@1 (48)
        on left: 1
        on right: 2
    erazagupenak (49)
        on left: 4 5
        on right: 2 4 14
    $@2 (50)
        on left: 3
        on right: 4
    id_zerrenda <izenak> (51)
        on left: 6
        on right: 4 18 23
    id_zerrendaren_bestea <izenak> (52)
        on left: 7 8
        on right: 6 7
    mota <mota> (53)
        on left: 9 10
        on right: 4 18 23
    azpiprogramen_erazagupena <azpi> (54)
        on left: 11 12
        on right: 2 11 14
    azpiprogramaren_erazagupena <azpi> (55)
        on left: 14
        on right: 11
    $@3 (56)
        on left: 13
        on right: 14
    argumentuak (57)
        on left: 15 16
        on right: 14
    par_zerrenda (58)
        on left: 18
        on right: 15
    $@4 (59)
        on left: 17
        on right: 18
    par_mota <mota> (60)
        on left: 19 20 21
        on right: 18 23
    par_zerrendaren_bestea (61)
        on left: 23 24
        on right: 18 23
    $@5 (62)
        on left: 22
        on right: 23
    sententzia_zerrenda <sent> (63)
        on left: 25 26
        on right: 2 14 25 28 29 30 37 38
    sententzia <sent> (64)
        on left: 27 28 29 30 31 32 33 34
        on right: 25
    if_jarraipena <sent> (65)
        on left: 35 36
        on right: 28
    bestela <sent> (66)
        on left: 37 38
        on right: 35 37
    aldagaia <var> (67)
        on left: 39
        on right: 27 33 53
    adierazpena <expr> (68)
        on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 27 28 30 31 34 37 40 41 42 43 44 45 46 47 48 49 50 51 52 56
    M <ref> (69)
        on left: 57
        on right: 2 28 29 30 31 37 50 51
    N <next> (70)
        on left: 58
        on right: 28 32 37


Estado 0

    0 $accept: . programa $end

    RPROGRAM  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    2 programa: RPROGRAM . TID $@1 erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE M

    TID  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    2 programa: RPROGRAM TID . $@1 erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE M

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 5


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    2 programa: RPROGRAM TID $@1 . erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE M

    RINT    desplazar e ir al estado 6
    RFLOAT  desplazar e ir al estado 7

    $default  reduce usando la regla 5 (erazagupenak)

    erazagupenak  ir al estado 8
    mota          ir al estado 9


Estado 6

    9 mota: RINT .

    $default  reduce usando la regla 9 (mota)


Estado 7

   10 mota: RFLOAT .

    $default  reduce usando la regla 10 (mota)


Estado 8

    2 programa: RPROGRAM TID $@1 erazagupenak . azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE M

    RPROC  desplazar e ir al estado 10

    $default  reduce usando la regla 12 (azpiprogramen_erazagupena)

    azpiprogramen_erazagupena    ir al estado 11
    azpiprogramaren_erazagupena  ir al estado 12


Estado 9

    4 erazagupenak: mota . id_zerrenda TSEMIC $@2 erazagupenak

    TID  desplazar e ir al estado 13

    id_zerrenda  ir al estado 14


Estado 10

   14 azpiprogramaren_erazagupena: RPROC . TID $@3 argumentuak erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE

    TID  desplazar e ir al estado 15


Estado 11

    2 programa: RPROGRAM TID $@1 erazagupenak azpiprogramen_erazagupena . TLBRACE sententzia_zerrenda TRBRACE M

    TLBRACE  desplazar e ir al estado 16


Estado 12

   11 azpiprogramen_erazagupena: azpiprogramaren_erazagupena . azpiprogramen_erazagupena

    RPROC  desplazar e ir al estado 10

    $default  reduce usando la regla 12 (azpiprogramen_erazagupena)

    azpiprogramen_erazagupena    ir al estado 17
    azpiprogramaren_erazagupena  ir al estado 12


Estado 13

    6 id_zerrenda: TID . id_zerrendaren_bestea

    TCOMMA  desplazar e ir al estado 18

    $default  reduce usando la regla 8 (id_zerrendaren_bestea)

    id_zerrendaren_bestea  ir al estado 19


Estado 14

    4 erazagupenak: mota id_zerrenda . TSEMIC $@2 erazagupenak

    TSEMIC  desplazar e ir al estado 20


Estado 15

   14 azpiprogramaren_erazagupena: RPROC TID . $@3 argumentuak erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE

    $default  reduce usando la regla 13 ($@3)

    $@3  ir al estado 21


Estado 16

    2 programa: RPROGRAM TID $@1 erazagupenak azpiprogramen_erazagupena TLBRACE . sententzia_zerrenda TRBRACE M

    $default  reduce usando la regla 26 (sententzia_zerrenda)

    sententzia_zerrenda  ir al estado 22


Estado 17

   11 azpiprogramen_erazagupena: azpiprogramaren_erazagupena azpiprogramen_erazagupena .

    $default  reduce usando la regla 11 (azpiprogramen_erazagupena)


Estado 18

    7 id_zerrendaren_bestea: TCOMMA . TID id_zerrendaren_bestea

    TID  desplazar e ir al estado 23


Estado 19

    6 id_zerrenda: TID id_zerrendaren_bestea .

    $default  reduce usando la regla 6 (id_zerrenda)


Estado 20

    4 erazagupenak: mota id_zerrenda TSEMIC . $@2 erazagupenak

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 24


Estado 21

   14 azpiprogramaren_erazagupena: RPROC TID $@3 . argumentuak erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE

    TLPAREN  desplazar e ir al estado 25

    $default  reduce usando la regla 16 (argumentuak)

    argumentuak  ir al estado 26


Estado 22

    2 programa: RPROGRAM TID $@1 erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda . TRBRACE M
   25 sententzia_zerrenda: sententzia_zerrenda . sententzia

    TID       desplazar e ir al estado 27
    RIF       desplazar e ir al estado 28
    RDO       desplazar e ir al estado 29
    RSKIP     desplazar e ir al estado 30
    RPRINTLN  desplazar e ir al estado 31
    RREAD     desplazar e ir al estado 32
    TRBRACE   desplazar e ir al estado 33

    REXIT     reduce usando la regla 58 (N)
    $default  reduce usando la regla 57 (M)

    sententzia  ir al estado 34
    aldagaia    ir al estado 35
    M           ir al estado 36
    N           ir al estado 37


Estado 23

    7 id_zerrendaren_bestea: TCOMMA TID . id_zerrendaren_bestea

    TCOMMA  desplazar e ir al estado 18

    $default  reduce usando la regla 8 (id_zerrendaren_bestea)

    id_zerrendaren_bestea  ir al estado 38


Estado 24

    4 erazagupenak: mota id_zerrenda TSEMIC $@2 . erazagupenak

    RINT    desplazar e ir al estado 6
    RFLOAT  desplazar e ir al estado 7

    $default  reduce usando la regla 5 (erazagupenak)

    erazagupenak  ir al estado 39
    mota          ir al estado 9


Estado 25

   15 argumentuak: TLPAREN . par_zerrenda TRPAREN

    RINT    desplazar e ir al estado 6
    RFLOAT  desplazar e ir al estado 7

    mota          ir al estado 40
    par_zerrenda  ir al estado 41


Estado 26

   14 azpiprogramaren_erazagupena: RPROC TID $@3 argumentuak . erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE

    RINT    desplazar e ir al estado 6
    RFLOAT  desplazar e ir al estado 7

    $default  reduce usando la regla 5 (erazagupenak)

    erazagupenak  ir al estado 42
    mota          ir al estado 9


Estado 27

   39 aldagaia: TID .

    $default  reduce usando la regla 39 (aldagaia)


Estado 28

   28 sententzia: RIF . adierazpena TLBRACE M sententzia_zerrenda TRBRACE N M if_jarraipena M TSEMIC

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 48


Estado 29

   30 sententzia: RDO . M TLBRACE sententzia_zerrenda TRBRACE RUNTIL M adierazpena RELSE M TLBRACE sententzia_zerrenda TRBRACE M TSEMIC

    $default  reduce usando la regla 57 (M)

    M  ir al estado 49


Estado 30

   31 sententzia: RSKIP . RIF adierazpena TSEMIC M

    RIF  desplazar e ir al estado 50


Estado 31

   34 sententzia: RPRINTLN . TLPAREN adierazpena TRPAREN TSEMIC

    TLPAREN  desplazar e ir al estado 51


Estado 32

   33 sententzia: RREAD . TLPAREN aldagaia TRPAREN TSEMIC

    TLPAREN  desplazar e ir al estado 52


Estado 33

    2 programa: RPROGRAM TID $@1 erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE . M

    $default  reduce usando la regla 57 (M)

    M  ir al estado 53


Estado 34

   25 sententzia_zerrenda: sententzia_zerrenda sententzia .

    $default  reduce usando la regla 25 (sententzia_zerrenda)


Estado 35

   27 sententzia: aldagaia . TASSIG adierazpena TSEMIC

    TASSIG  desplazar e ir al estado 54


Estado 36

   29 sententzia: M . RWHILE RFOREVER TLBRACE sententzia_zerrenda TRBRACE M TSEMIC

    RWHILE  desplazar e ir al estado 55


Estado 37

   32 sententzia: N . REXIT TSEMIC

    REXIT  desplazar e ir al estado 56


Estado 38

    7 id_zerrendaren_bestea: TCOMMA TID id_zerrendaren_bestea .

    $default  reduce usando la regla 7 (id_zerrendaren_bestea)


Estado 39

    4 erazagupenak: mota id_zerrenda TSEMIC $@2 erazagupenak .

    $default  reduce usando la regla 4 (erazagupenak)


Estado 40

   18 par_zerrenda: mota . par_mota id_zerrenda $@4 par_zerrendaren_bestea

    TCLE         desplazar e ir al estado 57
    TOUTPARAM    desplazar e ir al estado 58
    TINOUTPARAM  desplazar e ir al estado 59

    par_mota  ir al estado 60


Estado 41

   15 argumentuak: TLPAREN par_zerrenda . TRPAREN

    TRPAREN  desplazar e ir al estado 61


Estado 42

   14 azpiprogramaren_erazagupena: RPROC TID $@3 argumentuak erazagupenak . azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE

    RPROC  desplazar e ir al estado 10

    $default  reduce usando la regla 12 (azpiprogramen_erazagupena)

    azpiprogramen_erazagupena    ir al estado 62
    azpiprogramaren_erazagupena  ir al estado 12


Estado 43

   55 adierazpena: TFLOAT .

    $default  reduce usando la regla 55 (adierazpena)


Estado 44

   54 adierazpena: TINTEGER .

    $default  reduce usando la regla 54 (adierazpena)


Estado 45

   52 adierazpena: RNOT . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 63


Estado 46

   56 adierazpena: TLPAREN . adierazpena TRPAREN

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 64


Estado 47

   53 adierazpena: aldagaia .

    $default  reduce usando la regla 53 (adierazpena)


Estado 48

   28 sententzia: RIF adierazpena . TLBRACE M sententzia_zerrenda TRBRACE N M if_jarraipena M TSEMIC
   40 adierazpena: adierazpena . TADD adierazpena
   41            | adierazpena . TSUB adierazpena
   42            | adierazpena . TMUL adierazpena
   43            | adierazpena . TDIV adierazpena
   44            | adierazpena . TCEQ adierazpena
   45            | adierazpena . TCGT adierazpena
   46            | adierazpena . TCLT adierazpena
   47            | adierazpena . TCGE adierazpena
   48            | adierazpena . TCLE adierazpena
   49            | adierazpena . TCNE adierazpena
   50            | adierazpena . RAND M adierazpena
   51            | adierazpena . ROR M adierazpena

    RAND     desplazar e ir al estado 65
    ROR      desplazar e ir al estado 66
    TMUL     desplazar e ir al estado 67
    TADD     desplazar e ir al estado 68
    TSUB     desplazar e ir al estado 69
    TDIV     desplazar e ir al estado 70
    TCEQ     desplazar e ir al estado 71
    TCGT     desplazar e ir al estado 72
    TCLT     desplazar e ir al estado 73
    TCGE     desplazar e ir al estado 74
    TCLE     desplazar e ir al estado 75
    TCNE     desplazar e ir al estado 76
    TLBRACE  desplazar e ir al estado 77


Estado 49

   30 sententzia: RDO M . TLBRACE sententzia_zerrenda TRBRACE RUNTIL M adierazpena RELSE M TLBRACE sententzia_zerrenda TRBRACE M TSEMIC

    TLBRACE  desplazar e ir al estado 78


Estado 50

   31 sententzia: RSKIP RIF . adierazpena TSEMIC M

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 79


Estado 51

   34 sententzia: RPRINTLN TLPAREN . adierazpena TRPAREN TSEMIC

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 80


Estado 52

   33 sententzia: RREAD TLPAREN . aldagaia TRPAREN TSEMIC

    TID  desplazar e ir al estado 27

    aldagaia  ir al estado 81


Estado 53

    2 programa: RPROGRAM TID $@1 erazagupenak azpiprogramen_erazagupena TLBRACE sententzia_zerrenda TRBRACE M .

    $default  reduce usando la regla 2 (programa)


Estado 54

   27 sententzia: aldagaia TASSIG . adierazpena TSEMIC

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 82


Estado 55

   29 sententzia: M RWHILE . RFOREVER TLBRACE sententzia_zerrenda TRBRACE M TSEMIC

    RFOREVER  desplazar e ir al estado 83


Estado 56

   32 sententzia: N REXIT . TSEMIC

    TSEMIC  desplazar e ir al estado 84


Estado 57

   20 par_mota: TCLE .

    $default  reduce usando la regla 20 (par_mota)


Estado 58

   19 par_mota: TOUTPARAM .

    $default  reduce usando la regla 19 (par_mota)


Estado 59

   21 par_mota: TINOUTPARAM .

    $default  reduce usando la regla 21 (par_mota)


Estado 60

   18 par_zerrenda: mota par_mota . id_zerrenda $@4 par_zerrendaren_bestea

    TID  desplazar e ir al estado 13

    id_zerrenda  ir al estado 85


Estado 61

   15 argumentuak: TLPAREN par_zerrenda TRPAREN .

    $default  reduce usando la regla 15 (argumentuak)


Estado 62

   14 azpiprogramaren_erazagupena: RPROC TID $@3 argumentuak erazagupenak azpiprogramen_erazagupena . TLBRACE sententzia_zerrenda TRBRACE

    TLBRACE  desplazar e ir al estado 86


Estado 63

   40 adierazpena: adierazpena . TADD adierazpena
   41            | adierazpena . TSUB adierazpena
   42            | adierazpena . TMUL adierazpena
   43            | adierazpena . TDIV adierazpena
   44            | adierazpena . TCEQ adierazpena
   45            | adierazpena . TCGT adierazpena
   46            | adierazpena . TCLT adierazpena
   47            | adierazpena . TCGE adierazpena
   48            | adierazpena . TCLE adierazpena
   49            | adierazpena . TCNE adierazpena
   50            | adierazpena . RAND M adierazpena
   51            | adierazpena . ROR M adierazpena
   52            | RNOT adierazpena .

    TMUL  desplazar e ir al estado 67
    TADD  desplazar e ir al estado 68
    TSUB  desplazar e ir al estado 69
    TDIV  desplazar e ir al estado 70
    TCEQ  desplazar e ir al estado 71
    TCGT  desplazar e ir al estado 72
    TCLT  desplazar e ir al estado 73
    TCGE  desplazar e ir al estado 74
    TCLE  desplazar e ir al estado 75
    TCNE  desplazar e ir al estado 76

    $default  reduce usando la regla 52 (adierazpena)


Estado 64

   40 adierazpena: adierazpena . TADD adierazpena
   41            | adierazpena . TSUB adierazpena
   42            | adierazpena . TMUL adierazpena
   43            | adierazpena . TDIV adierazpena
   44            | adierazpena . TCEQ adierazpena
   45            | adierazpena . TCGT adierazpena
   46            | adierazpena . TCLT adierazpena
   47            | adierazpena . TCGE adierazpena
   48            | adierazpena . TCLE adierazpena
   49            | adierazpena . TCNE adierazpena
   50            | adierazpena . RAND M adierazpena
   51            | adierazpena . ROR M adierazpena
   56            | TLPAREN adierazpena . TRPAREN

    RAND     desplazar e ir al estado 65
    ROR      desplazar e ir al estado 66
    TMUL     desplazar e ir al estado 67
    TADD     desplazar e ir al estado 68
    TSUB     desplazar e ir al estado 69
    TDIV     desplazar e ir al estado 70
    TCEQ     desplazar e ir al estado 71
    TCGT     desplazar e ir al estado 72
    TCLT     desplazar e ir al estado 73
    TCGE     desplazar e ir al estado 74
    TCLE     desplazar e ir al estado 75
    TCNE     desplazar e ir al estado 76
    TRPAREN  desplazar e ir al estado 87


Estado 65

   50 adierazpena: adierazpena RAND . M adierazpena

    $default  reduce usando la regla 57 (M)

    M  ir al estado 88


Estado 66

   51 adierazpena: adierazpena ROR . M adierazpena

    $default  reduce usando la regla 57 (M)

    M  ir al estado 89


Estado 67

   42 adierazpena: adierazpena TMUL . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 90


Estado 68

   40 adierazpena: adierazpena TADD . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 91


Estado 69

   41 adierazpena: adierazpena TSUB . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 92


Estado 70

   43 adierazpena: adierazpena TDIV . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 93


Estado 71

   44 adierazpena: adierazpena TCEQ . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 94


Estado 72

   45 adierazpena: adierazpena TCGT . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 95


Estado 73

   46 adierazpena: adierazpena TCLT . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 96


Estado 74

   47 adierazpena: adierazpena TCGE . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 97


Estado 75

   48 adierazpena: adierazpena TCLE . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 98


Estado 76

   49 adierazpena: adierazpena TCNE . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 99


Estado 77

   28 sententzia: RIF adierazpena TLBRACE . M sententzia_zerrenda TRBRACE N M if_jarraipena M TSEMIC

    $default  reduce usando la regla 57 (M)

    M  ir al estado 100


Estado 78

   30 sententzia: RDO M TLBRACE . sententzia_zerrenda TRBRACE RUNTIL M adierazpena RELSE M TLBRACE sententzia_zerrenda TRBRACE M TSEMIC

    $default  reduce usando la regla 26 (sententzia_zerrenda)

    sententzia_zerrenda  ir al estado 101


Estado 79

   31 sententzia: RSKIP RIF adierazpena . TSEMIC M
   40 adierazpena: adierazpena . TADD adierazpena
   41            | adierazpena . TSUB adierazpena
   42            | adierazpena . TMUL adierazpena
   43            | adierazpena . TDIV adierazpena
   44            | adierazpena . TCEQ adierazpena
   45            | adierazpena . TCGT adierazpena
   46            | adierazpena . TCLT adierazpena
   47            | adierazpena . TCGE adierazpena
   48            | adierazpena . TCLE adierazpena
   49            | adierazpena . TCNE adierazpena
   50            | adierazpena . RAND M adierazpena
   51            | adierazpena . ROR M adierazpena

    RAND    desplazar e ir al estado 65
    ROR     desplazar e ir al estado 66
    TMUL    desplazar e ir al estado 67
    TADD    desplazar e ir al estado 68
    TSUB    desplazar e ir al estado 69
    TDIV    desplazar e ir al estado 70
    TCEQ    desplazar e ir al estado 71
    TCGT    desplazar e ir al estado 72
    TCLT    desplazar e ir al estado 73
    TCGE    desplazar e ir al estado 74
    TCLE    desplazar e ir al estado 75
    TCNE    desplazar e ir al estado 76
    TSEMIC  desplazar e ir al estado 102


Estado 80

   34 sententzia: RPRINTLN TLPAREN adierazpena . TRPAREN TSEMIC
   40 adierazpena: adierazpena . TADD adierazpena
   41            | adierazpena . TSUB adierazpena
   42            | adierazpena . TMUL adierazpena
   43            | adierazpena . TDIV adierazpena
   44            | adierazpena . TCEQ adierazpena
   45            | adierazpena . TCGT adierazpena
   46            | adierazpena . TCLT adierazpena
   47            | adierazpena . TCGE adierazpena
   48            | adierazpena . TCLE adierazpena
   49            | adierazpena . TCNE adierazpena
   50            | adierazpena . RAND M adierazpena
   51            | adierazpena . ROR M adierazpena

    RAND     desplazar e ir al estado 65
    ROR      desplazar e ir al estado 66
    TMUL     desplazar e ir al estado 67
    TADD     desplazar e ir al estado 68
    TSUB     desplazar e ir al estado 69
    TDIV     desplazar e ir al estado 70
    TCEQ     desplazar e ir al estado 71
    TCGT     desplazar e ir al estado 72
    TCLT     desplazar e ir al estado 73
    TCGE     desplazar e ir al estado 74
    TCLE     desplazar e ir al estado 75
    TCNE     desplazar e ir al estado 76
    TRPAREN  desplazar e ir al estado 103


Estado 81

   33 sententzia: RREAD TLPAREN aldagaia . TRPAREN TSEMIC

    TRPAREN  desplazar e ir al estado 104


Estado 82

   27 sententzia: aldagaia TASSIG adierazpena . TSEMIC
   40 adierazpena: adierazpena . TADD adierazpena
   41            | adierazpena . TSUB adierazpena
   42            | adierazpena . TMUL adierazpena
   43            | adierazpena . TDIV adierazpena
   44            | adierazpena . TCEQ adierazpena
   45            | adierazpena . TCGT adierazpena
   46            | adierazpena . TCLT adierazpena
   47            | adierazpena . TCGE adierazpena
   48            | adierazpena . TCLE adierazpena
   49            | adierazpena . TCNE adierazpena
   50            | adierazpena . RAND M adierazpena
   51            | adierazpena . ROR M adierazpena

    RAND    desplazar e ir al estado 65
    ROR     desplazar e ir al estado 66
    TMUL    desplazar e ir al estado 67
    TADD    desplazar e ir al estado 68
    TSUB    desplazar e ir al estado 69
    TDIV    desplazar e ir al estado 70
    TCEQ    desplazar e ir al estado 71
    TCGT    desplazar e ir al estado 72
    TCLT    desplazar e ir al estado 73
    TCGE    desplazar e ir al estado 74
    TCLE    desplazar e ir al estado 75
    TCNE    desplazar e ir al estado 76
    TSEMIC  desplazar e ir al estado 105


Estado 83

   29 sententzia: M RWHILE RFOREVER . TLBRACE sententzia_zerrenda TRBRACE M TSEMIC

    TLBRACE  desplazar e ir al estado 106


Estado 84

   32 sententzia: N REXIT TSEMIC .

    $default  reduce usando la regla 32 (sententzia)


Estado 85

   18 par_zerrenda: mota par_mota id_zerrenda . $@4 par_zerrendaren_bestea

    $default  reduce usando la regla 17 ($@4)

    $@4  ir al estado 107


Estado 86

   14 azpiprogramaren_erazagupena: RPROC TID $@3 argumentuak erazagupenak azpiprogramen_erazagupena TLBRACE . sententzia_zerrenda TRBRACE

    $default  reduce usando la regla 26 (sententzia_zerrenda)

    sententzia_zerrenda  ir al estado 108


Estado 87

   56 adierazpena: TLPAREN adierazpena TRPAREN .

    $default  reduce usando la regla 56 (adierazpena)


Estado 88

   50 adierazpena: adierazpena RAND M . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 109


Estado 89

   51 adierazpena: adierazpena ROR M . adierazpena

    TID       desplazar e ir al estado 27
    TFLOAT    desplazar e ir al estado 43
    TINTEGER  desplazar e ir al estado 44
    RNOT      desplazar e ir al estado 45
    TLPAREN   desplazar e ir al estado 46

    aldagaia     ir al estado 47
    adierazpena  ir al estado 110


Estado 90

   40 adierazpena: adierazpena . TADD adierazpena
   41            | adierazpena . TSUB adierazpena
   42            | adierazpena . TMUL adierazpena
   42            | adierazpena TMUL adierazpena .
   43            | adierazpena . TDIV adierazpena
   44            | adierazpena . TCEQ adierazpena
   45            | adierazpena . TCGT adierazpena
   46            | adierazpena . TCLT adierazpena
   47            | adierazpena . TCGE adierazpena
   48            | adierazpena . TCLE adierazpena
   49            | adierazpena . TCNE adierazpena
   50            | adierazpena . RAND M adierazpena
   51            | adierazpena . ROR M adierazpena

    $default  reduce usando la regla 42 (adierazpena)


Estado 91
